tests/fail/elaboration/item-cycle.snap
stdout = ''
stderr = '''
error: failed to infer type of definition
  ┌─ tests/fail/elaboration/item-cycle.fathom:4:5
  │
4 │ def first = second;
  │     ^^^^^ unsolved type of definition

error: failed to infer type of definition
   ┌─ tests/fail/elaboration/item-cycle.fathom:13:5
   │
13 │ def a = b;
   │     ^ unsolved type of definition

'''
